corrected header and studio alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,21 @@ h1, h2, h3, h4, h5, h6, p, ul {
 footer {
   background-color: var(--dark-background-color);
   color: var(--primary-background-color);
+  height: 310px;;
 }
 /*Global page settings ends*/
+
+/*Header*/
+.site-navigation{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navigation{
+  display: flex;
+  align-items: center;
+}
 
 /*Buttons*/
 
@@ -56,7 +69,8 @@ footer {
   padding: 16px 32px 16px 32px;
 }
 
-.button:hover .button:focus {
+.button:hover,
+.button:focus {
   background-color: var(--accent-color);
 }
 
@@ -69,6 +83,7 @@ footer {
   color: var(--accent-color);
   background-color: var(--secondary-background-color);
   cursor: pointer;
+  border: none;
 }
 
 .button-light:hover,
@@ -133,18 +148,29 @@ footer a {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.main-navigation-item:hover,
-.main-navigation-item:focus {
-  color: var(--primary-text-color);
+
+.main-navigation a:hover,
+.main-navigation a:focus {
+  color: var(--accent-color);
 }
 
 /*Benefits*/
 .benefits {
   display: flex;
+  
 }
 
 .benefits li {
   margin-right: 24px;
+}
+
+.benefits h3{
+  margin-bottom: 8px;
+}
+
+.benefits p{
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 .benefits li:last-child {
@@ -153,6 +179,14 @@ footer a {
 
 .services {
   display: flex;
+}
+
+.services li{
+  margin-right: 24px;
+}
+
+.services li:last-child{
+  margin-right:0;
 }
 
 /*Contacts*/
@@ -185,31 +219,58 @@ footer a {
   margin-bottom: 48px;
 }
 
-/*Benefits*/
-.benefit-items > h3 {
-  font-size: 20px;
-  line-height: 1.2;
-}
-
-
 /*What we are doing*/
 .heading-second-level {
   font-size: 36px;
   line-height: 1.33;
+  margin-bottom: 72px;
 }
 
-/*Our Tean*/
+.our-services{
+  text-align: center;
+  margin-top: -120px;
+
+}
+
+/*Our Team*/
+
+.our-team {
+  text-align: center;
+  background-color: var(--secondary-background-color);
+}
+
+.our-team li{
+  height: 380px;
+  background-color: var(--primary-background-color);
+  margin-right: 24px;
+}
+
+.our-team li:last-child{
+  margin-right: 0;
+} 
 
 .our-team-list {
   display: flex;
 }
 
-.our-team p {
-  background-color: var(--secondary-background-color);
-}
-.our-team-list > h2 {
+.our-team-list > h3 {
   font-size: 20px;
   line-height: 1.2;
+}
+
+.our-team-list h3{
+  margin-top: 32px;
+  margin-bottom: 8px;
+}
+
+/*Footer*/
+footer{
+  display: flex;
+  align-items: center;
+}
+footer p{
+  width: 264px;
+  margin-top: 16px;
 }
 
 /*Portfolio page*/
